# oop-mai-lab2

./: README.md
lab1/: CMakeLists.txt
lab1/include/: func.hpp
lab1/src/: func.cpp  lab1.cpp
lab1/tests/: test_main.cpp
lab2/lab2/: CMakeLists.txt
lab2/lab2/include/: func.hpp
lab2/lab2/src/: four_class.cpp  lab2.cpp
lab2/lab2/tests/: test_main.cpp
